tests/typechecker/pass/023-struct-subtyping.hyg
(struct {f = 42; g = true; h = "Hi"}): struct {f: int; g: bool}
